add synonym block

--- a/index.html
+++ b/index.html
@@ -19,17 +19,22 @@
       <form>  
         <div class="form-group">
           <label for="assembly_accession"> Assembly Accession (ex: GCF_001937115.1) </label>
-          <input type="text" class="form-control ids" id="assembly_accession" name="assembly_accession">
+          <input type="text" class="form-control" id="assembly_accession" name="assembly_accession">
         </div>
         <div class="form-group">
           <label for="assembly_name">Assembly Name (ex: Atum_1.0)</label>
-          <input type="text" class="form-control ids" id="assembly_name" name="assembly_name">
+          <input type="text" class="form-control" id="assembly_name" name="assembly_name">
         </div>
         <div class="form-group">
           <label for="uid">UID (ex: 944231)</label>
-          <input type="text" class="form-control ids" id="uid" name="uid">
+          <input type="text" class="form-control" id="uid" name="uid">
         </div>
         <button type="button" id="clear" class="btn btn-primary">Clear</button>
+        <hr>
+        <div class="form-group">
+          <label for="synonym">Synonym</label>
+          <textarea type="text" class="form-control" id="synonym" name="synonym"></textarea>
+        </div>
       </form>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
