make fill_ids function get current id

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <hr>
         <div class="form-group">
           <label for="synonym">Synonym</label>
-          <textarea type="text" class="form-control" id="synonym" name="synonym"></textarea>
+          <textarea type="text" class="form-control" id="synonym" name="synonym" disabled></textarea>
         </div>
       </form>
     </div>
