--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Automatic Fillin Prototype</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/dt/jqc-1.12.4/dt-1.10.18/sl-1.2.6/datatables.min.css"/>
+    <link rel="stylesheet" href="index.css">
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -16,29 +18,25 @@
 
   <body>
     <div class="container">
-      <form>  
+      <form>
+        <label>Please insert the organism name or NCBI taxnomy ID</label>
         <div class="form-group">
-          <label for="assembly_accession"> Assembly Accession (ex: GCF_001937115.1) </label>
-          <input type="text" class="form-control" id="assembly_accession" name="assembly_accession">
+          <label for="organism_name">Organism Name (ex: Aethina tumida, Anoplophora glabripennis)</label>
+          <input type="text" class="form-control" id="organism_name" name="organism_name">
         </div>
         <div class="form-group">
-          <label for="assembly_name">Assembly Name (ex: Atum_1.0)</label>
-          <input type="text" class="form-control" id="assembly_name" name="assembly_name">
+            <label for="tax_id">Taxonomy ID (ex: 116153, 217634)</label>
+            <input type="text" class="form-control" id="tax_id" name="tax_id">
         </div>
-        <div class="form-group">
-          <label for="uid">UID (ex: 944231)</label>
-          <input type="text" class="form-control" id="uid" name="uid">
-        </div>
-        <button type="button" id="clear" class="btn btn-primary">Clear</button>
+        <button type="button" id="organism-next" class="btn btn-primary" disabled>Next</button>
         <hr>
-        <div class="form-group">
-          <label for="synonym">Synonym</label>
-          <textarea type="text" class="form-control" id="synonym" name="synonym" disabled></textarea>
-        </div>
       </form>
+      <table id="id-table"></table>
+      <button type="button" id="select-assembly" class="btn btn-primary">Select</button>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="https://cdn.datatables.net/v/dt/jqc-1.12.4/dt-1.10.18/sl-1.2.6/datatables.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.9.1/underscore-min.js"></script>
     <script src="index.js"></script>
   </body>
