add submit_dataset page

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!doctype html>
 <html>
     <head>
         <title>Automatic Fillin Prototype</title>
@@ -6,6 +7,7 @@
         <h3>Automatic Fillin Prototype</h3>
         <ul>
             <li><a href="request_project.html">Request project form</a></li>
+            <li><a href="submit_dataset.html">Submit a dataset form</a></li>
         </ul>
     </body>
 </html>
